# automation

./: AUTHORS.rst  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
examples/checkserver/: check_top.py  checkserver_job.py  checkserver_script.py  testbed.yaml
parserlib/: __init__.py  top.py
proto/: nmts_graph_viewer.html  proto2tree.py  proto_filter.py
robot/: install_robotframework_ride.txt
