[metadata]
name = extraparsers
summary = Some Automation Parsers Library
author = Lei Yuan
author-email = yuanlottawa85@gmail.com
license = MIT
version = 0.0.1
# DO NOT CHANGE VERSION'S VALUE!!!
home-page = https://github.com/yuanlott/automation
description = Some automation parsers library
classifier =
    Programming Language :: Python :: 3

[files]
# Add here 'data_files', 'packages' or 'namespace_packages'.
# Additional data files are defined as key value pairs of target directory
# and source location from the root of the repository:
packages =
    extraparsers

[test]
# py.test options when running `python setup.py test`
addopts = tests

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov extraparsers --cov-report term-missing
    --verbose

[pbr]
# Let pbr run sphinx-apidoc
autodoc_tree_index_modules = True
# autodoc_tree_excludes = ...
# Let pbr itself generate the apidoc
# autodoc_index_modules = True
# autodoc_exclude_modules = ...
# Convert warnings to errors
# warnerrors = True

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel